# Grafux-mcp

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  block_downloader.py  bridge.py  config.py  executor.py  mcp_server.py  pyproject.toml  registry.py  render.yaml  requirements.txt  responsibilities.txt  routes.py
app/: __init__.py  config.py  dependencies.py  main.py  worker.py
app/api/: legacy.py
app/api/v1/: discovery.py  execution.py  health.py  registry.py  sessions.py  streaming.py
app/api/ws/: gateway.py
app/cache/: keys.py  redis_client.py
app/core/: errors.py  exceptions.py  http_client.py
app/core/lifecycle/: health_monitor.py  server_manager.py
app/db/: database.py
app/models/: __init__.py  invocation.py  mcp_server.py  mcp_tool.py  sandbox.py  session.py
app/schemas/: execution.py  mcp.py  registry.py
app/security/: auth.py  permissions.py
app/services/: audit_service.py  discovery_service.py  execution_service.py  registry_service.py  session_service.py
app/shared/: __init__.py  factories.py
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
tests/: _fakes.py  conftest.py
tests/integration/: test_execution_flow.py  test_legacy_endpoints.py
tests/unit/: test_background_tasks.py  test_config_validation.py  test_connection_pool.py  test_errors.py  test_event_bus.py  test_execution_background.py  test_execution_concurrency.py  test_execution_retry.py  test_http_client.py  test_router.py  test_routing_resolution.py  test_tool_index.py
tools/: brave_search.py
(+25 files in other folders)
